--- a/text_to_csv_for_ic.htm
+++ b/text_to_csv_for_ic.htm
@@ -103,7 +103,7 @@
 
   function process_data(loaded_files, store_processed_data) {
 
-      // console.log("process data #1", loaded_files);
+      console.log("process data #1", loaded_files);
 
       const cleaned_data_arr = loaded_files.map( (data, index) => 
 	
@@ -121,7 +121,7 @@
 
   };
 
-  function files_load(preloaded_files, loaded_files, store_loaded_files){
+  function files_load(preloaded_files, store_loaded_files){
 
       const open_files = new Array(preloaded_files.length);
 
@@ -189,14 +189,14 @@
       
   }
   
-  function File_upload({ preloaded_files, store_preloaded_files }) {
+  function File_upload({ preloaded_files, store_preloaded_files, store_loaded_files }) {
 
       //  https://blog.logrocket.com/using-filereader-api-preview-images-react/
 
       function handle_change(event) {
-
-	  store_preloaded_files(Array.from(event.target.files));
-
+	  
+	  files_load(Array.from(event.target.files), store_loaded_files);
+	  
       };
 
       return(
@@ -212,20 +212,12 @@
       const [csv_header, set_csv_header] = useState(
           'forename,surname,dob,phone_a,phone_b,address,postcode,source');
 
-      const [preloaded_files, store_preloaded_files] = useState([]);
-
       const [loaded_files, store_loaded_files] = useState([]);
 
       const [processed_data, store_processed_data] = useState([]);
 
       const [formatted_data, store_formatted_data] = useState([]);
 
-      useEffect(() => {
-
-	  files_load(preloaded_files, loaded_files, store_loaded_files);
-	  
-      }, [preloaded_files]);
-      
       useEffect(() => {
 
 	  console.log("loaded_files changed", loaded_files);
@@ -249,7 +241,7 @@
               <textarea className='short' name='csv_header' defaultValue={csv_header} onChange={event => set_csv_header(event.target.value)} ></textarea>
               <br/>
 
-	      <File_upload preloaded_files={preloaded_files} store_preloaded_files={store_preloaded_files} />
+	      <File_upload store_loaded_files={store_loaded_files} />
 	      <br/>
 
 	  Data processed to CSV (automatically downloaded): <br/>
