--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,12 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link rel="stylesheet" href="./css/normalize.css">
-
-<link rel="stylesheet" href="./css/stylize.css">
-
-<title>test</title>
-
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Project 1</title>
 </head>
-
 <body>
-
-    <div id="root"></div>
-    <script src="bundle.js"></script>
-  
+   <div id="root"></div>
+   <script src="bundle.js"></script>
 </body>
-
 </html>
