--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
+
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Project 1</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="./css/normalize.css">
+
+<link rel="stylesheet" href="./css/stylize.css">
+
+<title>test</title>
+
 </head>
+
 <body>
-   <div id="root"></div>
-   <script src="bundle.js"></script>
+
+    <div id="root"></div>
+    <script src="bundle.js"></script>
+  
 </body>
+
 </html>
