--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,32 @@
 
 <link rel="stylesheet" href="./css/stylize.css">
 
-<title>test</title>
+<title>RTF-to-CSV</title>
 
 </head>
 
 <body>
+
+  <h1>RTF-to-CSV</h1>
+    <h2><strong>How this works</strong></h2>
+
+    1. Input the CSV template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header <em>names</em> must match the default).   
+    <br><br>
+
+    2. Select the <code>*.rtf</code> file(s) via "Browse..." that are to be fit into it (can be multiple files) and confirm selection.
+    <br><br>
+
+    3. The CSV will be automatically generated and downloaded which should contain 1 row per RTF file provided.
+
+    <br><br>
+
+    <strong>Privacy notice:</strong> all data processing is done solely on the computer running this <em>intentionally offline</em> website, via client-side Javascript engines available within any modern web browser.
+    <br>No data is ever stored within the browser after exit (e.g. using localStorage), or transmitted over any network connection.
+    <br>The offline nature can be verified by pressing F12, choosing "Network", and adjusting headers to show "URL", or by simply disconnecting the computer from internet/network.
+    <br><br>
+
+    <em>Javascript by Thomas. Framework by React.js v18.2. Bundling by Rollup.js v3.21.</em>
+    <br><br><br>
 
     <div id="root"></div>
     <script src="bundle.js"></script>
