Added a version number

--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
 
 <link rel="stylesheet" href="./css/stylize.css">
 
-<title>RTF-to-CSV</title>
+<title>RTF-to-CSV v1.0</title>
 
 </head>
 
 <body>
 
-  <h1>RTF-to-CSV</h1>
+  <h1>RTF-to-CSV v1.0</h1>
     <h2><strong>How this works</strong></h2>
 
     1. Input the CSV template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header <em>names</em> must match the default).   
