Neatened up index.html

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <br>The offline nature can be verified by pressing F12, choosing "Network", and adjusting headers to show "URL", or by simply disconnecting the computer from internet/network.
     <br><br>
 
-    <em>Javascript by Thomas. Framework by React.js v18.2. Bundling by Rollup.js v3.21.</em>
+    <em><a href="https://www.howjavascriptworks.com/sample.html">Javascript</a> programmed by Thomas. Framework by <a href="https://react.dev/">React.js</a> v18.2. Bundling by <a href="https://rollupjs.org/">Rollup.js</a> v3.21.</em>
     <br><br><br>
 
     <div id="root"></div>
