A few final touches to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 
     <strong>Privacy notice:</strong> all data processing is done solely on the computer running this <em>intentionally offline</em> website, via client-side Javascript engines available within any modern web browser.
     <br>No data is ever stored within the browser after exit (e.g. using localStorage), or transmitted over any network connection.
-    <br>The offline nature can be verified by pressing F12, choosing "Network", and adjusting headers to show "URL", or by simply disconnecting the computer from internet/network.
+    <br>The offline nature can be verified on Google Chrome or Microsoft Edge (nowadays based on Google's Chromium) by pressing F12, choosing "Network", and adjusting headers to show "Domain" and "Protocol", or by simply disconnecting the computer from internet/network whilst using.
     <br><br>
 
     <em><a href="https://www.howjavascriptworks.com/sample.html">Javascript</a> programmed by Thomas. Framework by <a href="https://react.dev/">React.js</a> v18.2. Bundling by <a href="https://rollupjs.org/">Rollup.js</a> v3.21.</em>
