--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   <h1>RTF-to-CSV v1.0</h1>
     <h2><strong>How this works</strong></h2>
 
-    1. Input the CSV template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header <em>names</em> must match the default).   
+    1. Input the CSV template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header names <em>must</em> match the current ones).   
     <br><br>
 
     2. Select the <code>*.rtf</code> file(s) via "Browse..." that are to be fit into it (can be multiple files) and confirm selection.
