--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <br><br><br>
 
     <div id="root"></div>
-    <script src="bundle.js"></script>
+    <script src="./javascript/bundle.js"></script>
   
 </body>
 
