--- a/public/index_inline_skel_head.html
+++ b/public/index_inline_skel_head.html
@@ -69,8 +69,4 @@ button {
     <br><br><br>
 
     <div id="root"></div>
-    <script src="./javascript/bundle.js"></script>
-  
-</body>
-
-</html>
+    <script>
