title_case() for all name output

--- a/public/rtf_to_csv_full.html
+++ b/public/rtf_to_csv_full.html
@@ -8242,7 +8242,6 @@ button {
 	function extract_fullname(data) {
 	  try {
 	    var names = extract_names(data);
-	    console.log(title_case(names[1].trim() + " " + names[0]));
 	    return title_case(names[1].trim() + " " + names[0]);
 	  } catch (_unused) {
 	    return "";
@@ -8367,7 +8366,7 @@ button {
 	}
 	function extract_gp(data) {
 	  try {
-	    return data.match(/Practice.*_/)[0].replace('Practice:', '').replace(/,.*/, '').trim();
+	    return title_case(data.match(/Practice.*_/)[0].replace('Practice:', '').replace(/,.*/, '').trim());
 	  } catch (_unused14) {
 	    return "";
 	  }
@@ -8458,7 +8457,7 @@ button {
 	}
 
 	function App() {
-	  var non_mat_csv_header = 'DATE,FORENAME,SURNAME,ADDRESS,POST CODE,TEL,MOB,EMAIL,DOB,REFERRAL TYPE,REFERRAL SOURCE,REFERRING DEPT/ORG,REFERRER NAME,GP';
+	  var non_mat_csv_header = 'DATE,PLACEHOLDER,FORENAME,SURNAME,ADDRESS,PLACEHOLDER,POST CODE,TEL,MOB,EMAIL,DOB,REFERRAL TYPE,REFERRAL SOURCE,REFERRING DEPT/ORG,PLACEHOLDER,REFERRER NAME,GP';
 	  var mat_csv_header = 'FULLNAME,REF DATE_STR,PLACEHOLDER,REF DATE_MONTH,MOB,DOB,POST CODE,PLACEHOLDER,REFERRER NAME,PLACEHOLDER,PLACEHOLDER,PLACEHOLDER,GP';
 	  var _useState = reactExports.useState(non_mat_csv_header),
 	    _useState2 = _slicedToArray(_useState, 2),
