Minor tweak for user friendliness

--- a/public/index_inline_skel_head.html
+++ b/public/index_inline_skel_head.html
@@ -50,7 +50,7 @@ button {
   <h1>RTF-to-CSV v1.01</h1>
     <h2><strong>How this works</strong></h2>
 
-    1. Select/input the CSV template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header names <em>must</em> match the current ones).   
+    1. Select/input the CSV header template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header names <em>must</em> match the current ones).   
     <br><br>
 
     2. Select the <code>*.rtf</code> file(s) via "Choose files" button that are to be converted to fit the template (can be multiple files) and confirm selection.
