--- a/public/index_inline_skel_head.html
+++ b/public/index_inline_skel_head.html
@@ -58,6 +58,8 @@ button {
 
     3. The CSV will be automatically generated and downloaded, which should contain 1 row per RTF file provided, and be openable with spreadsheet software.
 
+    4. Download the CSV, and copy the values. When pasting, use right-click and select 'Paste as values', fixing any formula boxes afterwards (by dragging downwards from the bottom-right corner).
+
     <br><br>
 
     <strong>Privacy notice:</strong> all data processing is done solely on the computer running this <em>intentionally offline</em> website, via client-side Javascript engines available within any modern web browser.
