--- a/public/rtf_to_csv_full.html
+++ b/public/rtf_to_csv_full.html
@@ -50,13 +50,15 @@ button {
   <h1>RTF-to-CSV v1.01</h1>
     <h2><strong>How this works</strong></h2>
 
-    1. Select/input the CSV template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header names <em>must</em> match the current ones).   
+    1. Select/input the CSV header template that the data is to be fit into, or leave it as the default as of 2023 (note: if you make changes, the header names <em>must</em> match the current ones).   
     <br><br>
 
     2. Select the <code>*.rtf</code> file(s) via "Choose files" button that are to be converted to fit the template (can be multiple files) and confirm selection.
     <br><br>
 
     3. The CSV will be automatically generated and downloaded, which should contain 1 row per RTF file provided, and be openable with spreadsheet software.
+
+    4. Download the CSV, and copy the values. When pasting, use right-click and select 'Paste as values', fixing any formula boxes afterwards (by dragging downwards from the bottom-right corner).
 
     <br><br>
 
@@ -8318,7 +8320,11 @@ button {
 	}
 	function extract_refer_dept(data) {
 	  try {
-	    return data.match(/Referring Speciality.*Other/)[0].replace('Referring Speciality', '').replace('Other', '').replace(',', '').trim();
+	    if (data.includes("TDT")) {
+	      return "TDT";
+	    } else {
+	      return data.match(/Referring Speciality.*Other/)[0].replace('Referring Speciality', '').replace('Other', '').replace(',', '').trim();
+	    }
 	  } catch (_unused9) {
 	    return "";
 	  }
@@ -8484,7 +8490,7 @@ button {
 	  reactExports.useEffect(function () {
 	    download_data(formatted_data);
 	  }, [formatted_data]);
-	  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement("strong", null, "CSV header:"), " ", /*#__PURE__*/React.createElement("br", null), /*#__PURE__*/React.createElement(Csv_header_select, {
+	  return /*#__PURE__*/React.createElement(React.Fragment, null, /*#__PURE__*/React.createElement("strong", null, "CSV header template:"), " ", /*#__PURE__*/React.createElement("br", null), /*#__PURE__*/React.createElement(Csv_header_select, {
 	    non_mat_csv_header: non_mat_csv_header,
 	    mat_csv_header: mat_csv_header,
 	    set_csv_header: set_csv_header
