--- a/public/rtf_to_csv_full.html
+++ b/public/rtf_to_csv_full.html
@@ -8235,7 +8235,8 @@ button {
 	    'REF DATE': extract_refer_date(data),
 	    'REF DATE_STR': extract_refer_date_str(data),
 	    'REF DATE_MONTH': extract_refer_date_month(data),
-	    'GP': extract_gp(data)
+	    'GP': extract_gp(data),
+	    'TYPE': extract_maternity_type(data)
 	  });
 	}
 	function extract_names(data) {
@@ -8377,6 +8378,26 @@ button {
 	    return "";
 	  }
 	}
+	function extract_gender(data) {
+	  try {
+	    return data.match(/Sex:.*DOB/)[0].replace('Sex: ', '').replace('DOB', '');
+	  } catch (_unused15) {
+	    return "";
+	  }
+	}
+	function extract_maternity_type(data) {
+	  try {
+	    var gender = extract_gender(data);
+	    console.log("gender", gender);
+	    if (gender.toLowerCase() === "female") {
+	      return "Pregnant";
+	    } else {
+	      return "Partner";
+	    }
+	  } catch (_unused16) {
+	    return "";
+	  }
+	}
 	function title_case(str) {
 	  return str.toLowerCase().split(' ').map(function (word) {
 	    return word.charAt(0).toUpperCase() + word.slice(1);
@@ -8464,7 +8485,7 @@ button {
 
 	function App() {
 	  var non_mat_csv_header = 'DATE,PLACEHOLDER,FORENAME,SURNAME,ADDRESS,PLACEHOLDER,POST CODE,TEL,MOB,EMAIL,DOB,REFERRAL TYPE,REFERRAL SOURCE,REFERRING DEPT/ORG,PLACEHOLDER,REFERRER NAME,GP';
-	  var mat_csv_header = 'FULLNAME,REF DATE_STR,PLACEHOLDER,REF DATE_MONTH,MOB,DOB,POST CODE,PLACEHOLDER,REFERRER NAME,PLACEHOLDER,PLACEHOLDER,PLACEHOLDER,GP';
+	  var mat_csv_header = 'FULLNAME,REF DATE_STR,PLACEHOLDER,REF DATE_MONTH,MOB,DOB,POST CODE,PLACEHOLDER,REFERRER NAME,PLACEHOLDER,PLACEHOLDER,TYPE,GP';
 	  var _useState = reactExports.useState(non_mat_csv_header),
 	    _useState2 = _slicedToArray(_useState, 2),
 	    csv_header = _useState2[0],
